--- a/TubeRacer/TubeRacer.vcxproj.filters
+++ b/TubeRacer/TubeRacer.vcxproj.filters
@@ -24,12 +24,24 @@
     <ClCompile Include="Utils.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="TubeSegmentBuilder.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="TubeSegmentRenderData.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Utils.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="TubeSegmentBuilder.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="TubeSegmentRenderData.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
