--- a/TubeRacer/TubeRacer.vcxproj
+++ b/TubeRacer/TubeRacer.vcxproj
@@ -160,16 +160,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="CameraDeveloper.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TubeSegmentBuilder.cpp" />
     <ClCompile Include="TubeSegmentRenderData.cpp" />
-    <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="CameraDeveloper.h" />
     <ClInclude Include="TubeSegmentBuilder.h" />
     <ClInclude Include="TubeSegmentRenderData.h" />
-    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Meine Libraries\OpenGL-CoreLib\OpenGL-CoreLib\OpenGL-CoreLib.vcxproj">
