--- a/TubeRacer/TubeRacer.vcxproj.filters
+++ b/TubeRacer/TubeRacer.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="CameraDeveloper.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerShip.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -42,6 +45,9 @@
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="CameraDeveloper.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerShip.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
